new code changes

--- a/code/assignment_1_auan.ipynb
+++ b/code/assignment_1_auan.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,12 +64,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import re"
+    "import re\n",
+    "import os"
    ]
   },
   {
@@ -88,13 +89,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
     "def find_attributes (filename):\n",
     "    filepath = os.path.join(\"..\", \"in\", \"USEcorpus\", \"a1\", filename) # define file path, with open file name\n",
-    "    with open(filepath, \"r\", encoding=\"utf-8\") as file: # open the file and encode using utf 8\n",
+    "    with open(filepath, \"r\", encoding=\"latin-1\") as file: # open the file and encode using utf 8\n",
     "        text = file.read()\n",
     "    text = re.sub(r'<.*?>', '', text) # remove all characters between < > \n",
     "    doc = nlp(text) # use spacy nlp  to create and find tokens.\n",
@@ -141,36 +142,40 @@
     "    unique_entities_LOC = set(entities_LOC)\n",
     "    unique_entities_ORG = set(entities_ORG) # using set to find the unique entities in the list.\n",
     "    # checking to see if it has worked so far \n",
-    "    print(filename, relative_freq_NOUN, relative_freq_VERB, relative_freq_ADJ, relative_freq_ADV, unique_entities_PER, unique_entities_LOC, unique_entities_ORG)\n",
+    "    #print(filename, relative_freq_NOUN, relative_freq_VERB, relative_freq_ADJ, relative_freq_ADV, unique_entities_PER, unique_entities_LOC, unique_entities_ORG)\n",
     "    \n",
     "    # creating a dictionary so i can store the data in a pandas dataframe \n",
-    "    datadic = [\n",
-    "    {\"Filename\": filename, \"RelFreq NOUN\": relative_freq_NOUN, \"RelFreq VERB\": relative_freq_VERB, \"RelFreq ADJ\": relative_freq_ADJ, \"RelFreq ADV\": relative_freq_ADV, \"Unique PER\": unique_entities_PER, \"Unique LOC\": unique_entities_LOC, \"Unique ORG\": unique_entities_ORG}\n",
-    "]\n",
-    "\n",
+    "    #datadic = [\n",
+    "    #{\"Filename\": filename, \"RelFreq NOUN\": relative_freq_NOUN, \"RelFreq VERB\": relative_freq_VERB, \"RelFreq ADJ\": relative_freq_ADJ, \"RelFreq ADV\": relative_freq_ADV, \"Unique PER\": unique_entities_PER, \"Unique LOC\": unique_entities_LOC, \"Unique ORG\": unique_entities_ORG}\n",
+    "#]\n",
+    "    #touple_of_data = []\n",
+    "    #for doc in [filename]:\n",
+    "        #touple_of_data.append((doc, relative_freq_NOUN, relative_freq_VERB, relative_freq_ADJ, relative_freq_ADV, unique_entities_PER, unique_entities_LOC, unique_entities_ORG))\n",
+    "    #print(touple_of_data)\n",
+    "    all_tuples = []\n",
+    "    touple_of_data = []\n",
+    "    for doc in [filename]:\n",
+    "        touple_of_data.append((filename, relative_freq_NOUN, relative_freq_VERB, relative_freq_ADJ, relative_freq_ADV, unique_entities_PER, unique_entities_LOC, unique_entities_ORG))\n",
+    "        all_tuples.append(touple_of_data)\n",
+    "    print(all_tuples)\n",
     "# creating a pandas dataframe, and storing in out folder as a csv file\n",
-    "    data = pd.DataFrame(datadic)\n",
-    "    print(data)\n",
-    "    outpath = os.path.join(\"..\", \"out\", filename + \"annotations.csv\") # creating variable which works like a function for code below\n",
-    "    data.to_csv(outpath)\n",
+    "    #data = pd.DataFrame(touple_of_data)\n",
+    "    #print(data)\n",
+    "    #outpath = os.path.join(\"..\", \"out\", filename + \"annotations.csv\") # creating variable which works like a function for code below\n",
+    "    #data.to_csv(outpath)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0100.a1.txt 1533.05 1223.63 801.69 534.46 set() set() set()\n",
-      "      Filename  RelFreq NOUN  RelFreq VERB  RelFreq ADJ  RelFreq ADV  \\\n",
-      "0  0100.a1.txt       1533.05       1223.63       801.69       534.46   \n",
-      "\n",
-      "  Unique PER Unique LOC Unique ORG  \n",
-      "0         {}         {}         {}  \n"
+      "[[('0100.a1.txt', 1533.05, 1223.63, 801.69, 534.46, set(), set(), set())]]\n"
      ]
     }
    ],
@@ -180,20 +185,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
-     "ename": "UnicodeDecodeError",
-     "evalue": "'utf-8' codec can't decode byte 0xf6 in position 1592: invalid start byte",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[('0176.a1.txt', 1408.14, 1243.12, 649.06, 682.07, set(), set(), {'Visingsö Folk High School'})]]\n",
+      "[[('3040.a1.txt', 1168.09, 1737.89, 940.17, 655.27, set(), set(), set())]]\n",
+      "[[('2044.a1.txt', 1398.96, 1450.78, 556.99, 595.85, {'Marie Antoinette'}, set(), set())]]\n",
+      "[[('1102.a1.txt', 1198.63, 1381.28, 730.59, 730.59, {'katt', 'superintendet Morse', 'Britsh', 'Minette Walters'}, {'Africa', 'Asia'}, {'instace'})]]\n",
+      "[[('1029.a1.txt', 1342.04, 1330.17, 748.22, 439.43, set(), set(), set())]]\n",
+      "[[('0218.a1.txt', 1404.36, 1452.78, 714.29, 447.94, set(), set(), set())]]\n",
+      "[[('1043.a1.txt', 1356.32, 1264.37, 643.68, 678.16, set(), set(), set())]]\n",
+      "[[('0200.a1.txt', 1261.17, 1320.75, 774.58, 705.06, {'Dickens', 'Austen', 'Shakespeare'}, {'Caribbean'}, {'Oxford'})]]\n",
+      "[[('1074.a1.txt', 1552.68, 1293.9, 702.4, 674.68, set(), set(), set())]]\n",
+      "[[('2047.a1.txt', 1520.91, 1318.12, 722.43, 671.74, set(), set(), set())]]\n",
+      "[[('0187.a1.txt', 1298.7, 1428.57, 753.25, 753.25, set(), set(), {'the Cambridge Certificate in Advanced English'})]]\n",
+      "[[('1026.a1.txt', 1000.0, 1344.83, 629.31, 456.9, set(), set(), set())]]\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mUnicodeDecodeError\u001b[0m                        Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[94], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m file\u001b[39m.\u001b[39mencode(\u001b[39m\"\u001b[39m\u001b[39mutf-8\u001b[39m\u001b[39m\"\u001b[39m)\u001b[39m.\u001b[39mstrip()\n\u001b[1;32m      4\u001b[0m testone \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mjoin(filepath_new, file)\n\u001b[0;32m----> 5\u001b[0m find_attributes(file)\n",
-      "Cell \u001b[0;32mIn[91], line 4\u001b[0m, in \u001b[0;36mfind_attributes\u001b[0;34m(filename)\u001b[0m\n\u001b[1;32m      2\u001b[0m filepath \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mjoin(\u001b[39m\"\u001b[39m\u001b[39m..\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39min\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mUSEcorpus\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39ma1\u001b[39m\u001b[39m\"\u001b[39m, filename)\n\u001b[1;32m      3\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(filepath, \u001b[39m\"\u001b[39m\u001b[39mr\u001b[39m\u001b[39m\"\u001b[39m, encoding\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mutf-8\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39mas\u001b[39;00m file:\n\u001b[0;32m----> 4\u001b[0m     text \u001b[39m=\u001b[39m file\u001b[39m.\u001b[39;49mread()\n\u001b[1;32m      5\u001b[0m text \u001b[39m=\u001b[39m re\u001b[39m.\u001b[39msub(\u001b[39mr\u001b[39m\u001b[39m'\u001b[39m\u001b[39m<.*?>\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39m'\u001b[39m, text)\n\u001b[1;32m      6\u001b[0m doc \u001b[39m=\u001b[39m nlp(text)\n",
-      "File \u001b[0;32m/usr/lib/python3.9/codecs.py:322\u001b[0m, in \u001b[0;36mBufferedIncrementalDecoder.decode\u001b[0;34m(self, input, final)\u001b[0m\n\u001b[1;32m    319\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mdecode\u001b[39m(\u001b[39mself\u001b[39m, \u001b[39minput\u001b[39m, final\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m):\n\u001b[1;32m    320\u001b[0m     \u001b[39m# decode input (taking the buffer into account)\u001b[39;00m\n\u001b[1;32m    321\u001b[0m     data \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mbuffer \u001b[39m+\u001b[39m \u001b[39minput\u001b[39m\n\u001b[0;32m--> 322\u001b[0m     (result, consumed) \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_buffer_decode(data, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49merrors, final)\n\u001b[1;32m    323\u001b[0m     \u001b[39m# keep undecoded input until the next call\u001b[39;00m\n\u001b[1;32m    324\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mbuffer \u001b[39m=\u001b[39m data[consumed:]\n",
-      "\u001b[0;31mUnicodeDecodeError\u001b[0m: 'utf-8' codec can't decode byte 0xf6 in position 1592: invalid start byte"
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[49], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[39mfor\u001b[39;00m file \u001b[39min\u001b[39;00m os\u001b[39m.\u001b[39mlistdir(filepath_new):\n\u001b[1;32m      3\u001b[0m     testone \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mjoin(filepath_new, file)\n\u001b[0;32m----> 4\u001b[0m     find_attributes(file)\n",
+      "Cell \u001b[0;32mIn[47], line 6\u001b[0m, in \u001b[0;36mfind_attributes\u001b[0;34m(filename)\u001b[0m\n\u001b[1;32m      4\u001b[0m     text \u001b[39m=\u001b[39m file\u001b[39m.\u001b[39mread()\n\u001b[1;32m      5\u001b[0m text \u001b[39m=\u001b[39m re\u001b[39m.\u001b[39msub(\u001b[39mr\u001b[39m\u001b[39m'\u001b[39m\u001b[39m<.*?>\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39m'\u001b[39m, text) \u001b[39m# remove all characters between < > \u001b[39;00m\n\u001b[0;32m----> 6\u001b[0m doc \u001b[39m=\u001b[39m nlp(text) \u001b[39m# use spacy nlp  to create and find tokens.\u001b[39;00m\n\u001b[1;32m      8\u001b[0m \u001b[39m# finding relFreg of nouns\u001b[39;00m\n\u001b[1;32m      9\u001b[0m noun_count \u001b[39m=\u001b[39m\u001b[39m0\u001b[39m \u001b[39m# creating empty variables \u001b[39;00m\n",
+      "File \u001b[0;32m~/.local/lib/python3.9/site-packages/spacy/language.py:1011\u001b[0m, in \u001b[0;36mLanguage.__call__\u001b[0;34m(self, text, disable, component_cfg)\u001b[0m\n\u001b[1;32m   1009\u001b[0m     error_handler \u001b[39m=\u001b[39m proc\u001b[39m.\u001b[39mget_error_handler()\n\u001b[1;32m   1010\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m-> 1011\u001b[0m     doc \u001b[39m=\u001b[39m proc(doc, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mcomponent_cfg\u001b[39m.\u001b[39;49mget(name, {}))  \u001b[39m# type: ignore[call-arg]\u001b[39;00m\n\u001b[1;32m   1012\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mKeyError\u001b[39;00m \u001b[39mas\u001b[39;00m e:\n\u001b[1;32m   1013\u001b[0m     \u001b[39m# This typically happens if a component is not initialized\u001b[39;00m\n\u001b[1;32m   1014\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(Errors\u001b[39m.\u001b[39mE109\u001b[39m.\u001b[39mformat(name\u001b[39m=\u001b[39mname)) \u001b[39mfrom\u001b[39;00m \u001b[39me\u001b[39;00m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -202,6 +225,27 @@
     "for file in os.listdir(filepath_new):\n",
     "    testone = os.path.join(filepath_new, file)\n",
     "    find_attributes(file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'touple_of_data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[20], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[39mprint\u001b[39m(touple_of_data)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'touple_of_data' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "print(touple_of_data)"
    ]
   }
  ],
