--- a/code/assignment_1_auan.ipynb
+++ b/code/assignment_1_auan.ipynb
@@ -166,14 +166,21 @@
     "                    unique_entities_LOC = set(entities_LOC)\n",
     "                    unique_entities_ORG = set(entities_ORG)\n",
     "\n",
-    "                    touple_of_data = []\n",
+    "                    # Creating an empty list to store the touples, created below.\n",
+    "                    touple_of_data = [] \n",
+    "\n",
+    "                    # Appending each variable together as a touples, and creating a dataframe out of the list. Specifying coloumns aswell.\n",
     "                    touple_of_data.append((file_name, relative_freq_NOUN, relative_freq_VERB, relative_freq_ADJ, relative_freq_ADV, unique_entities_PER, unique_entities_LOC, unique_entities_ORG))\n",
     "                    data = pd.DataFrame(touple_of_data, columns=['Filename', 'Noun Freq', 'Verb Freq', 'Adj Freq', 'Adv Freq', 'Unique PER', 'Unique LOC', 'Unique ORG'])\n",
+    "                    \n",
+    "                    # Appending each dataframe (which is only one row) into a new list created at the begining of this function. \n",
     "                    all_data.append(data)\n",
     "\n",
+    "                # concating / appending all dataframes together to create one dataframe for each text.\n",
     "                final_data = pd.concat(all_data)\n",
     "                \n",
-    "                outpath = os.path.join(\"..\", \"out\", folder_name + \".csv\") # creating variable which works like a function for code below\n",
+    "                # Saving the dataframe to folder out.\n",
+    "                outpath = os.path.join(\"..\", \"out\", folder_name + \".csv\") \n",
     "                final_data.to_csv(outpath, index= False)\n",
     "\n",
     "    return final_data\n",
@@ -195,7 +202,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Creating a variable which has the directory path.\n",
     "directory = os.path.join(\"..\", \"in\", \"USECorpus\")\n",
+    "# Running the function\n",
     "dfs = find_attributes(directory)\n",
     "\n"
    ]
