--- a/code/assignment_1_auan.ipynb
+++ b/code/assignment_1_auan.ipynb
@@ -4,57 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This assignment concerns using ```spaCy``` to extract linguistic information from a corpus of texts.\n",
-    "\n",
-    "The corpus is an interesting one: *The Uppsala Student English Corpus (USE)*. All of the data is included in the folder called ```in``` but you can access more documentation via [this link](https://ota.bodleian.ox.ac.uk/repository/xmlui/handle/20.500.12024/2457).\n",
-    "\n",
-    "For this exercise, you should write some code which does the following:\n",
-    "\n",
-    "- Loop over each text file in the folder called ```in```\n",
-    "- Extract the following information:\n",
-    "    - Relative frequency of Nouns, Verbs, Adjective, and Adverbs per 10,000 words\n",
-    "    - Total number of *unique* PER, LOC, ORGS\n",
-    "- For each sub-folder (a1, a2, a3, ...) save a table which shows the following information:\n",
-    "\n",
-    "|Filename|RelFreq NOUN|RelFreq VERB|RelFreq ADJ|RelFreq ADV|Unique PER|Unique LOC|Unique ORG|\n",
-    "|---|---|---|---|---|---|---|---|\n",
-    "|file1.txt|---|---|---|---|---|---|---|\n",
-    "|file2.txt|---|---|---|---|---|---|---|\n",
-    "|etc|---|---|---|---|---|---|---|\n",
-    "\n",
-    "## Objective\n",
-    "\n",
-    "This assignment is designed to test that you can:\n",
-    "\n",
-    "1. Work with multiple input data arranged hierarchically in folders;\n",
-    "2. Use ```spaCy``` to extract linguistic information from text data;\n",
-    "3. Save those results in a clear way which can be shared or used for future analysis\n",
-    "\n",
-    "## Some notes\n",
-    "\n",
-    "- The data is arranged in various subfolders related to their content (see the [README](in/README.md) for more info). You'll need to think a little bit about how to do this. You should be able do it using a combination of things we've already looked at, such as ```os.listdir()```, ```os.path.join()```, and for loops.\n",
-    "- The text files contain some extra information that such as document ID and other metadata that occurs between pointed brackets ```<>```. Make sure to remove these as part of your preprocessing steps!\n",
-    "- There are 14 subfolders (a1, a2, a3, etc), so when completed the folder ```out``` should have 14 CSV files.\n",
-    "\n",
-    "## Additional comments\n",
-    "\n",
-    "Your code should include functions that you have written wherever possible. Try to break your code down into smaller self-contained parts, rather than having it as one long set of instructions.\n",
-    "\n",
-    "For this assignment, you are welcome to submit your code either as a Jupyter Notebook, or as ```.py``` script. If you do not know how to write ```.py``` scripts, don't worry - we're working towards that!\n",
-    "\n",
-    "Lastly, you are welcome to edit this README file to contain whatever informatio you like. Remember - documentation is important!\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Create a spacy NLP class\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,8 +18,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Importing modules"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,12 +46,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "def find_attributes(directory): # Making a function called find_attributes with the parameter folderpath\n",
-    "    all_data = [] # An empty list to store each dataframe created.\n",
+    "    \n",
     "    \n",
     "    # Making a for loop that finds each file and the path to that file, and saves it in a variable folder_path\n",
     "    # os.listdir makes a list of the specified directory with all the files in the directory.\n",
@@ -98,6 +61,7 @@
     "\n",
     "        # Start by checking if the new variable is a directory, if true it moves on and finds the path to each file in the subfolder.\n",
     "        if os.path.isdir(folder_path):\n",
+    "            all_data = [] # An empty list to store each dataframe created.\n",
     "            for file_name in os.listdir(folder_path):\n",
     "                file_path = os.path.join(folder_path, file_name)\n",
     "                # If statement that checks if the new file_path is a file, is yes it moves on and opens the file encoding it as latin-1 \n",
@@ -106,6 +70,7 @@
     "                if os.path.isfile(file_path):\n",
     "                    with open(file_path, 'r', encoding=\"latin-1\") as file:\n",
     "                        text = file.read()\n",
+    "                    \n",
     "\n",
     "                    # Regexing removing alle places where there are angle brackets.\n",
     "                    # sub - replaces the occurrance \n",
@@ -133,7 +98,7 @@
     "                            adverb_count += 1\n",
     "\n",
     "                    # Finding the relative frequence by dividing a specific part of speech with the lenght of the text\n",
-    "                    # and multiplying på 10 000. \n",
+    "                    # and multiplying by 10 000. \n",
     "                    relative_freq_ADJ = (adjective_count/len(doc)) * 10000 \n",
     "                    relative_freq_ADJ = round(relative_freq_ADJ, 2)\n",
     "                    relative_freq_NOUN = (noun_count/len(doc)) * 10000\n",
@@ -183,7 +148,7 @@
     "                outpath = os.path.join(\"..\", \"out\", folder_name + \".csv\") \n",
     "                final_data.to_csv(outpath, index= False)\n",
     "\n",
-    "    return final_data\n",
+    "    #return final_data\n",
     "                        \n",
     "\n"
    ]
@@ -198,32 +163,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[8], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m directory \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mjoin(\u001b[39m\"\u001b[39m\u001b[39m..\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39min\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mUSECorpus\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m      3\u001b[0m \u001b[39m# Running the function\u001b[39;00m\n\u001b[1;32m----> 4\u001b[0m dfs \u001b[39m=\u001b[39m find_attributes(directory)\n",
-      "Cell \u001b[1;32mIn[7], line 27\u001b[0m, in \u001b[0;36mfind_attributes\u001b[1;34m(directory)\u001b[0m\n\u001b[0;32m     21\u001b[0m \u001b[39m# Regexing removing alle places where there are angle brackets.\u001b[39;00m\n\u001b[0;32m     22\u001b[0m \u001b[39m# sub - replaces the occurrance \u001b[39;00m\n\u001b[0;32m     23\u001b[0m \u001b[39m# . - means all characters\u001b[39;00m\n\u001b[0;32m     24\u001b[0m \u001b[39m# * - means zero or more occurances\u001b[39;00m\n\u001b[0;32m     25\u001b[0m \u001b[39m# ? - means zero or one coccurance. \u001b[39;00m\n\u001b[0;32m     26\u001b[0m text \u001b[39m=\u001b[39m re\u001b[39m.\u001b[39msub(\u001b[39mr\u001b[39m\u001b[39m'\u001b[39m\u001b[39m<.*?>\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39m'\u001b[39m, text)\n\u001b[1;32m---> 27\u001b[0m doc \u001b[39m=\u001b[39m nlp(text) \u001b[39m# use spacy nlp to create and find tokens defined by spacy.\u001b[39;00m\n\u001b[0;32m     29\u001b[0m \u001b[39m# Creating variables to be used below. \u001b[39;00m\n\u001b[0;32m     30\u001b[0m noun_count \u001b[39m=\u001b[39m\u001b[39m0\u001b[39m  \n",
-      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\spacy\\language.py:1011\u001b[0m, in \u001b[0;36mLanguage.__call__\u001b[1;34m(self, text, disable, component_cfg)\u001b[0m\n\u001b[0;32m   1009\u001b[0m     error_handler \u001b[39m=\u001b[39m proc\u001b[39m.\u001b[39mget_error_handler()\n\u001b[0;32m   1010\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m-> 1011\u001b[0m     doc \u001b[39m=\u001b[39m proc(doc, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mcomponent_cfg\u001b[39m.\u001b[39mget(name, {}))  \u001b[39m# type: ignore[call-arg]\u001b[39;00m\n\u001b[0;32m   1012\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mKeyError\u001b[39;00m \u001b[39mas\u001b[39;00m e:\n\u001b[0;32m   1013\u001b[0m     \u001b[39m# This typically happens if a component is not initialized\u001b[39;00m\n\u001b[0;32m   1014\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(Errors\u001b[39m.\u001b[39mE109\u001b[39m.\u001b[39mformat(name\u001b[39m=\u001b[39mname)) \u001b[39mfrom\u001b[39;00m \u001b[39me\u001b[39;00m\n",
-      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\spacy\\pipeline\\trainable_pipe.pyx:52\u001b[0m, in \u001b[0;36mspacy.pipeline.trainable_pipe.TrainablePipe.__call__\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\spacy\\pipeline\\tagger.pyx:143\u001b[0m, in \u001b[0;36mspacy.pipeline.tagger.Tagger.predict\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\thinc\\model.py:315\u001b[0m, in \u001b[0;36mModel.predict\u001b[1;34m(self, X)\u001b[0m\n\u001b[0;32m    311\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mpredict\u001b[39m(\u001b[39mself\u001b[39m, X: InT) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m OutT:\n\u001b[0;32m    312\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"Call the model's `forward` function with `is_train=False`, and return\u001b[39;00m\n\u001b[0;32m    313\u001b[0m \u001b[39m    only the output, instead of the `(output, callback)` tuple.\u001b[39;00m\n\u001b[0;32m    314\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[1;32m--> 315\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_func(\u001b[39mself\u001b[39;49m, X, is_train\u001b[39m=\u001b[39;49m\u001b[39mFalse\u001b[39;49;00m)[\u001b[39m0\u001b[39m]\n",
-      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\thinc\\layers\\chain.py:55\u001b[0m, in \u001b[0;36mforward\u001b[1;34m(model, X, is_train)\u001b[0m\n\u001b[0;32m     53\u001b[0m callbacks \u001b[39m=\u001b[39m []\n\u001b[0;32m     54\u001b[0m \u001b[39mfor\u001b[39;00m layer \u001b[39min\u001b[39;00m model\u001b[39m.\u001b[39mlayers:\n\u001b[1;32m---> 55\u001b[0m     Y, inc_layer_grad \u001b[39m=\u001b[39m layer(X, is_train\u001b[39m=\u001b[39;49mis_train)\n\u001b[0;32m     56\u001b[0m     callbacks\u001b[39m.\u001b[39mappend(inc_layer_grad)\n\u001b[0;32m     57\u001b[0m     X \u001b[39m=\u001b[39m Y\n",
-      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\thinc\\model.py:291\u001b[0m, in \u001b[0;36mModel.__call__\u001b[1;34m(self, X, is_train)\u001b[0m\n\u001b[0;32m    288\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__call__\u001b[39m(\u001b[39mself\u001b[39m, X: InT, is_train: \u001b[39mbool\u001b[39m) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m Tuple[OutT, Callable]:\n\u001b[0;32m    289\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"Call the model's `forward` function, returning the output and a\u001b[39;00m\n\u001b[0;32m    290\u001b[0m \u001b[39m    callback to compute the gradients via backpropagation.\"\"\"\u001b[39;00m\n\u001b[1;32m--> 291\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_func(\u001b[39mself\u001b[39;49m, X, is_train\u001b[39m=\u001b[39;49mis_train)\n",
-      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\thinc\\layers\\with_array.py:38\u001b[0m, in \u001b[0;36mforward\u001b[1;34m(model, Xseq, is_train)\u001b[0m\n\u001b[0;32m     36\u001b[0m     \u001b[39mreturn\u001b[39;00m model\u001b[39m.\u001b[39mlayers[\u001b[39m0\u001b[39m](Xseq, is_train)\n\u001b[0;32m     37\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m---> 38\u001b[0m     \u001b[39mreturn\u001b[39;00m cast(Tuple[SeqT, Callable], _list_forward(model, Xseq, is_train))\n",
-      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\thinc\\layers\\with_array.py:72\u001b[0m, in \u001b[0;36m_list_forward\u001b[1;34m(model, Xs, is_train)\u001b[0m\n\u001b[0;32m     70\u001b[0m pad \u001b[39m=\u001b[39m model\u001b[39m.\u001b[39mattrs[\u001b[39m\"\u001b[39m\u001b[39mpad\u001b[39m\u001b[39m\"\u001b[39m]\n\u001b[0;32m     71\u001b[0m lengths \u001b[39m=\u001b[39m layer\u001b[39m.\u001b[39mops\u001b[39m.\u001b[39masarray1i([\u001b[39mlen\u001b[39m(seq) \u001b[39mfor\u001b[39;00m seq \u001b[39min\u001b[39;00m Xs])\n\u001b[1;32m---> 72\u001b[0m Xf \u001b[39m=\u001b[39m layer\u001b[39m.\u001b[39;49mops\u001b[39m.\u001b[39;49mflatten(Xs, pad\u001b[39m=\u001b[39;49mpad)\n\u001b[0;32m     73\u001b[0m Yf, get_dXf \u001b[39m=\u001b[39m layer(Xf, is_train)\n\u001b[0;32m     75\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mbackprop\u001b[39m(dYs: ListXd) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m ListXd:\n",
-      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\thinc\\backends\\ops.py:306\u001b[0m, in \u001b[0;36mOps.flatten\u001b[1;34m(self, X, dtype, pad, ndim_if_empty)\u001b[0m\n\u001b[0;32m    304\u001b[0m     padded\u001b[39m.\u001b[39mappend(xp\u001b[39m.\u001b[39mzeros((pad,) \u001b[39m+\u001b[39m x\u001b[39m.\u001b[39mshape[\u001b[39m1\u001b[39m:], dtype\u001b[39m=\u001b[39mx\u001b[39m.\u001b[39mdtype))\n\u001b[0;32m    305\u001b[0m     X \u001b[39m=\u001b[39m padded\n\u001b[1;32m--> 306\u001b[0m result \u001b[39m=\u001b[39m xp\u001b[39m.\u001b[39;49mconcatenate(X)\n\u001b[0;32m    307\u001b[0m \u001b[39mif\u001b[39;00m dtype \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m    308\u001b[0m     result \u001b[39m=\u001b[39m xp\u001b[39m.\u001b[39masarray(result, dtype\u001b[39m=\u001b[39mdtype)\n",
-      "File \u001b[1;32m<__array_function__ internals>:200\u001b[0m, in \u001b[0;36mconcatenate\u001b[1;34m(*args, **kwargs)\u001b[0m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Creating a variable which has the directory path.\n",
     "directory = os.path.join(\"..\", \"in\", \"USECorpus\")\n",
